tests/conformance/positive/08-with-params.sml
<!-- Parameters -->
<skill interface="code-review">
  <param name="focus">security</param>
  <param name="severity">high</param>
  Review the authentication module.
</skill>
