tests/conformance/negative/14-directive-in-definition.sml
<!-- Error: directives inside definition bodies are invalid -->
<skill define="interface" name="review">
  <tool name="bash">
    Review code using bash.
  </tool>
</skill>
